# sdmxabs

./: .gitignore  CHANGELOG.md  README.md  build-test.sh  pyproject.toml
docs/: sdmxabs.html  search.js
docs/sdmxabs/: fetch.html  fetch_multi.html  fetch_pop.html  fetch_selection.html
junk/: pyproject.toml
src/sdmxabs/: __init__.py  data.py  download_cache.py  fetch.py  measures.py  metadata.py  select_items.py  xml_base.py
test/: ABS_SDMX_Inflation_multi_measure.ipynb  test.ipynb
tests/: test_download_cache.py  test_fetch.py  test_flow_metadata.py  test_integration.py  test_measures.py
