[project]
name = "sdmxabs"
version = "0.0.1a1"
description = "Get data from the Australian Bureau of Statistics (ABS) using the SDMX API."
readme = "README.md"
authors = [
    { name = "Bryan Palmer", email = "palmer.bryan@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    # - system
    "typing",
    "pathlib",
    "importlib",

    # - internet
    "requests",
    "types-requests",

    # - data science
    "pandas",
    "tabulate",
]

[dependency-groups]
dev = [
    # - tools
    "black",
    "mypy",
    "pdoc",
    "pylint",
    "ruff",
    
    # - typing
    "pandas-stubs",
    "types-tabulate",

    # --- testing
    "ipython",
    "ipykernel",
    "watermark",
]

[project.urls]
Repository = "https://github.com/bpalmer4/sdmxabs"
Homepage = "https://github.com/bpalmer4/sdmxabs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdmxabs"]

[tool.ruff]
line-length=110
lint.select = [ "ALL" ]  # Aggresively select all rules
lint.ignore = [
    # --- specific rules to ignore
    "COM812",  # missing or trailing comma - recommended by ruff format
    "D203",    # Incorrect blank line before class - recommended by ruff check
    "D213",    # Multi-line docstring summary should start at the first line - recommended by ruff
    "T201",    # `print` found - generates a lot of false positives
]

